Green: detect repeated assignments in C code

--- a/mypy.ini
+++ b/mypy.ini
@@ -4,6 +4,7 @@ warn_unreachable = True
 strict = True
 warn_return_any = True
 disallow_untyped_calls = True
+disallow_subclassing_any = False
 
 ;Getting errors like:
 ;tests/test_parser.py:8: error: Module "parser" does not explicitly export attribute "Formatter"; implicit reexport disabled
