--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
+args==0.1.0
 attrs==21.4.0
 cfgv==3.3.1
+clint==0.5.1
+coverage==6.4.1
 distlib==0.3.4
+expects==0.9.0
 filelock==3.7.1
 identify==2.5.1
 iniconfig==1.1.1
+mamba==0.11.2
 mypy==0.961
 mypy-extensions==0.4.3
 nodeenv==1.7.0
